# internal/api/oas_validators_gen.go
@@ -68,8 +68,66 @@ func (s RecordType) Validate() error {
 	}
 }
 
+func (s *RecordWithId) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if err := s.Type.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "type",
+			Error: err,
+		})
+	}
+	if err := func() error {
+		if err := (validate.Int{
+			MinSet:        true,
+			Min:           1,
+			MaxSet:        false,
+			Max:           0,
+			MinExclusive:  false,
+			MaxExclusive:  false,
+			MultipleOfSet: false,
+			MultipleOf:    0,
+		}).Validate(int64(s.Version)); err != nil {
+			return errors.Wrap(err, "int")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "version",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
+func (s RecordWithIdType) Validate() error {
+	switch s {
+	case "credentials":
+		return nil
+	case "text":
+		return nil
+	case "binary":
+		return nil
+	case "card":
+		return nil
+	default:
+		return errors.Errorf("invalid value: %v", s)
+	}
+}
+
 func (s RecordsGetOKApplicationJSON) Validate() error {
-	alias := ([]Record)(s)
+	alias := ([]RecordWithId)(s)
 	if alias == nil {
 		return errors.New("nil is invalid value")
 	}
